HelloUltraviolet/Fixtures/RejectedSource/FFI/RawExportUnsupportedABI/Source/Main.uv
//! Rejected FFI specimen for raw export unsupported ABI strings.

#export("fantasy-abi")
public procedure rawExportUnsupportedABIReference() -> i32 {
    return 0
}

